# Signal-CANdy

./: .gitignore  AGENTS.md  CHANGELOG.md  DBC_Parser.sln  General_Guidance_For_AGENTS.md  LICENSE  NEXT_ROADMAP.md  README.ko.md  README.md  ROADMAP.md  Signal.CANdy.sln  THIRD_PARTY_NOTICES.md  run-coverage.ps1  test_cpp_compat  test_cpp_compat.cpp
.sisyphus/: boulder.json
Plans/: ORACLE_DECODER_STRATEGY.md  ROADMAP.md  design_valid_gt64_bitmask.md
Report/: 20260212_1020_CodegenTests_Windows_호환성_수정.md  20260212_1310_C1_C2_Critical_수정.md  20260212_1352_Core_테스트_H1c_H1g_H3c.md  20260212_1405_H2_Generator_Core_통합.md  20260212_1418_M2_M3_M4_코드품질개선.md  20260212_1915_L4c_DLC매핑_종합테스트_signed수정.md  20260213_0000_Morning_Briefing.md  20260213_1850_Oracle_Core_Engine_구현.md  20260213_1925_테스트_신뢰확보_인프라.md
Reports/: 20260212-1534_CAN_FD_지원_추가.md  20260212-1615_main_c_comprehensive_bitpattern_tests.md  20260212_9999_일일총정리_ROADMAP_대규모진행.md  20260213-1101_CI_트리거_정리_SDK고정.md  20260213-1300_v0.3.0_릴리스.md  20260213-1720_Oracle_실패해결_플랜수립.md  20260213-1817_Oracle_하네스_템플릿_구현.md  (+84 more)
tests/oracle/: CATEGORY_C_EXCEPTIONS.md  ORACLE_RESULTS.md  __init__.py  pyproject.toml  requirements.txt  run_corpus.py  run_matrix.py  run_oracle.py
tests/oracle/oracle/: __init__.py  engine.py  harness.py  metadata_compare.py  report.py  tolerance.py  vector_gen.py
tests/oracle/templates/: oracle_harness.c
tests/oracle/tests/: __init__.py  conftest.py  test_engine.py  test_harness.py  test_metadata.py  test_mux_assumptions.py  test_tolerance.py  test_vector_gen.py
tests/oracle/vendor_dbc/: README.md
(+85 files in other folders)
